A bay holds a machine or a room: rooms as items in three sizes, one holder, no cycles, Leave always out
Rooms stop being a separate system. A room is a block crafted in three sizes (3, 9, 13 inside,
one chunk each), racked into an empty bay and pulled out as an item that carries everything built
in it plus a ticket, so a copy opens nothing. Leave goes to the Workbay that holds or last held the
room, a safe spot beside it, or the respawn point; a nested room comes out into its parent; a room
can never end up inside itself. A bay holding a room has no channels; Connectors placed inside a
room belong to its holder and travel with it. The item cannot be destroyed. Chunk loading is one
server knob, roomsLoadWithWorkbay, off. Gone: the Room Frames, the Annex Plate, the ROOMS page,
the per-room anchor (#59). Six gametests, each watched red; walked and photographed in Correction;
five faults from the walk fixed. SPEC §0 rewritten first.